src/main/css/altmetric.css
/* Altmetric badge and citation widgets in search/browse results */
div.altmetric-container {
    float: right;
}

span.altmetric-embed, .__dimensions_badge_embed__ {
    margin-left: 12px;
    float: left;
}

.altmetric-embed img {
    height: 21px;
    width: unset;
}

@media ( max-width : 812px) {
    div.altmetric-container {
        float: unset;
        margin: 12px 0;
        display: block;
    }
    span.altmetric-embed, .__dimensions_badge_embed__ {
        margin: 0 12px 0 0 !important;
    }
}

